# StateMachine

./: .gitignore  StateMachine.pro  main.cpp
StateMachine/: MachineBase.cpp  MachineBase.h  MachineControl.cpp  MachineControl.h  ManagerMessages.cpp  ManagerMessages.h  ManagerMessagesControl.cpp  ManagerMessagesControl.h  Messages.cpp  Messages.h  StateBase.cpp  StateBase.h  StateControl.h  StateMachineBase.cpp  StateMachineBase.h  StateMachineControl.h
backend/: CMakeLists.txt  MachineBase.cpp  ManagerMessages.h  StateBase.h  StateControl.cpp  StateControl.h  StateMachineBase.cpp  StateMachineBase.h  StateMachineControl.cpp
frontend/MAIN/: main.cpp
frontend/TEST/: main.cpp
